Change setup.sh and .gitignore
Pull rec_conv branch of caffe:
https://github.com/venkai/caffe/tree/rec_conv
which is up to date with BVLC/caffe and contains all rbdn layers
in addition to RecursiveConvLayer. Make .gitignore not track
directories whose names end with _debug.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,8 @@ results
 *.rar
 *.7z
 
+# Debug directories
+# these are marked as *_debug and will not be tracked by git
+# _debug will be removed from dirname once these are ready
+*_debug
+
